#230 fix bug on firefox

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -770,7 +770,7 @@ p:empty {
         flex: auto;
 
         h1 {
-            display: inline-flex;
+            display: flex;
             justify-content: start;
 
             i {
